--- a/Source/Website/Web.config
+++ b/Source/Website/Web.config
@@ -125,8 +125,7 @@
   </runtime>
   <connectionStrings>
     <add name="dbContext" connectionString="Server=(localdb)\MSSQLLocalDB;Database=rewards;Trusted_Connection=True;MultipleActiveResultSets=true"
-      providerName="System.Data.SqlClient"/>
-  </connectionStrings>
+          providerName="System.Data.SqlClient"/>  </connectionStrings>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
     <modules>
